--- a/HTML_CSS/Modulo002/desafio_10/css/style.css
+++ b/HTML_CSS/Modulo002/desafio_10/css/style.css
@@ -50,7 +50,14 @@ nav {
 }
 
 main {
+    padding: 20px;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
     background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
+    border-radius: 0px 0px 10px 10px;
 }
 
 main h1 {
@@ -60,6 +67,16 @@ main h1 {
 
 main h2 {
     font-family: var(--fonte-android);
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequena {
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 footer {
