--- a/HTML_CSS/desafios/desafio_12/css/style.css
+++ b/HTML_CSS/desafios/desafio_12/css/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +19,7 @@ html, body {
     /* A viewheight é calculada baseada na porcentagem da área de visualização do conteúdo. */
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,9 +30,11 @@ header {
 
 header > h1 {
     padding-top: 50px;
-
+    
     /* Deixa as letras maiúsculas destacadas no texto. */
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -45,6 +58,8 @@ section {
     /* Espaçamento entre linhas. */
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -59,8 +74,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    /* Medida responsiva. */
-    max-width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: #52301c;
     color: white;
 }
