--- a/JavaScript/aula012-exercicios/ex015/style.css
+++ b/JavaScript/aula012-exercicios/ex015/style.css
@@ -1,9 +1,11 @@
 body {
     background: rgb(122, 122, 255);
-    font: normal 15pt Arial;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font: normal 15pt;
 }
 
 header {
+    text-align: center;
     color: white;
 }
 
@@ -14,6 +16,33 @@ section {
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.233);
+}
+
+#data_nascimento, #botão {
+    text-decoration: none;
+    border: none;
+    background-color: rgb(122, 122, 255);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#data_nascimento:hover, #botão:hover {
+    background-color: rgb(202, 202, 0);
+    color: black;
+}
+
+label, #women, #men {
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px
+}
+
+#foto {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin: 10px;
 }
 
 footer {
